# verify-nitro-attestation

./: .gitignore  Cargo.toml  README.md  build.sh  config  image_hash  patch_wasi.sh  run.sh  task.json  verify_attestation.wasm  wasi-libc_0.0~git20200319.9efc2f4-2_all.deb
data/: attestation_doc  extracted.txt  pcr0.txt  public_key.txt
run/: public_key  task.json  verify_attestation.wasm
run/dev/: urandom
src/: main.rs
