[package]
name = "verify_attestation"
version = "0.1.0"
authors = ["Jonas Metzger <metzgerj@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aws-nitro-enclaves-cose = "0.3.0"
# openssl = { version = "0.10.35", features = ["vendored"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.9"
