[package]
name = "verify_attestation"
version = "0.1.0"
authors = ["Jonas Metzger <metzgerj@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-cose = "0.3.0"
openssl = { version = "0.10.36", features=["vendored"]}
hex = "0.4.3"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

